# cpp-project-template

./: .clang-tidy  .clangd  .cppcheck_suppression.txt  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  CMakeUserPresets.json.template  DEVELOPMENT.md  EDITOR_SETUP.md  README.md  appleclang.json  clang-cl.json  clang.json  conanfile.py  conanfile.txt  coverage.json  gcc.json  local_options..cmake.example  local_options.cmake.example  mingw.json  msvc.json  os-macos.json  os-windows.json  os.json  project_dependencies.cmake  project_options.cmake  project_options.dev.cmake  project_options.lib.dev.cmake  project_options.lib.rel.cmake  project_options.local.cmake.example  project_options.rel.cmake  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.github/actions/setup-pkg-manager/: action.yaml
.github/actions/setup-vcpkg/: action.yaml
.github/workflows/: build-and-test.yml
cmake/: analyzers_optimizers.cmake  compiler.cmake  conan-preconfigure.cmake  config_conan.cmake  config_vcpkg.cmake  coverage.cmake  local_vcpkg.cmake.example  package_manager.cmake  profiler.cmake  sanitizer_analyzer.cmake  sanitizers.cmake  setup-windows.cmake  target_options.cmake  version.cmake
cmake/conan-profiles/: clang-cl-windows-asan.ini  clang-cl-windows-debug.ini  clang-cl-windows-release.ini
examples/: CMakeLists.txt
examples/mylib_consumer/: main.cpp
examples/perfetto/: main_perfetto.cpp
examples/sanitizers/: main_fail_sanitizer.cpp
examples/tracy/: main_tracy.cpp
include/MyLib/: classify.hpp  math.hpp
include/cmake_project_template/: version.h
include/cpp_project_template/: version.h
scripts/: cov-to-md.py  make-badge.py  setup-ubuntu.sh  setup-windows.ps1  stage-badges.sh
src/: classify.cpp  classify.hpp  main.cpp  main_fail_sanitizer.cpp  math.cpp  math.hpp
src/myapp/: CMakeLists.txt  greeter.cpp  greeter.hpp  main.cpp
src/mylib/: CMakeLists.txt  classify.cpp  math.cpp
test/: CMakeLists.txt  test_app.cpp  test_classify.cpp  test_math.cpp  test_simple.cpp
test/sanitizers/: .clang-tidy  sanitizer_tests.cpp  trip_asan.cpp  trip_lsan.cpp  trip_msan.cpp  trip_tsan.cpp  trip_ubsan.cpp
